[package]
name = "tre-regex"
version = "0.4.2"
edition = "2021"
description = "Rust safe bindings to the TRE regex module"
readme = "README.md"
repository = "https://github.com/Elizafox/tre-regex"
license = "BSD-2-Clause"
rust-version = "1.74.0"
authors = ["Elizabeth Myers"]
categories = ["api-bindings", "text-processing"]
keywords = ["regex", "tre", "api", "safe-bindings"]

[dependencies]
tre-regex-sys = "0.4.1"
widestring = { version = "1.0.2", optional = true }

[features]
default = ["vendored", "approx", "wchar"]
vendored = ["tre-regex-sys/vendored"]
wchar = ["tre-regex-sys/wchar", "dep:widestring"]
approx = ["tre-regex-sys/approx"]
